--- a/hacker-news-reader.cabal
+++ b/hacker-news-reader.cabal
@@ -1,8 +1,8 @@
-name:                hacker-news
+name:                hacker-news-reader
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/PlanarGraph/hacker-news#readme
+homepage:            https://github.com/PlanarGraph/HackerNewsReader#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Nolan Tiffney
@@ -59,12 +59,12 @@ library
                      , TypeOperators
                      , TypeFamilies
 
-executable hacker-news-exe
+executable hacker-news-reader-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
   build-depends:       base
-                     , hacker-news
+                     , hacker-news-reader
                      , polysemy
                      , polysemy-plugin
                      , brick
@@ -74,7 +74,7 @@ executable hacker-news-exe
                      , async
   default-language:    Haskell2010
 
-test-suite hacker-news-test
+test-suite hacker-news-reader-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
@@ -89,4 +89,4 @@ test-suite hacker-news-test
 
 source-repository head
   type:     git
-  location: https://github.com/PlanarGraph/hacker-news
+  location: https://github.com/PlanarGraph/HackerNewsReader
